--- a/gallery.html
+++ b/gallery.html
@@ -214,6 +214,10 @@
 						<div class="3u"><a href="images/fulls/0115.jpg" class="image fit"><img src="images/thumbs/0115.jpg" alt="" title="Untitled" /></a></div>
 						<div class="3u"><a href="images/fulls/0116.jpg" class="image fit"><img src="images/thumbs/0116.jpg" alt="" title="Untitled" /></a></div>
 					</div>
+					<div class="row 0%">
+						<div class="3u"><a href="images/fulls/0117.jpg" class="image fit"><img src="images/thumbs/0117.jpg" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="images/fulls/0118.jpg" class="image fit"><img src="images/thumbs/0118.jpg" alt="" title="Untitled" /></a></div>
+					</div>
 				</div>
 			</article>
 
