--- a/gallery.html
+++ b/gallery.html
@@ -217,6 +217,7 @@
 					<div class="row 0%">
 						<div class="3u"><a href="images/fulls/0117.jpg" class="image fit"><img src="images/thumbs/0117.jpg" alt="" title="Untitled" /></a></div>
 						<div class="3u"><a href="images/fulls/0118.jpg" class="image fit"><img src="images/thumbs/0118.jpg" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="images/fulls/0119.jpg" class="image fit"><img src="images/thumbs/0119.jpg" alt="" title="Untitled" /></a></div>
 					</div>
 				</div>
 			</article>
