change email address

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 				<header>
 					<h2>Want to Talk?</h2>
 				</header>
-				<form method="post" action="MAILTO:heyanling082290@gmail.com" enctype="text/plain">
+				<form method="post" action="MAILTO:i@heyanling.org" enctype="text/plain">
 					<div class="row 50%">
 						<div class="6u"><input type="text" class="text" name="name" placeholder="Name" /></div>
 						<div class="6u"><input type="text" class="text" name="email" placeholder="Email" /></div>
