--- a/project/index.html
+++ b/project/index.html
@@ -95,51 +95,13 @@
 						</div>
 						<div class="4u">
 							<section class="box">
-								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+								<a href="docs/AntibioticsEffectiveness.pdf" class="image featured"><img src="images/06.jpg" alt="" /></a>
 								<header>
-									<h3>Fit in something important later</h3>
+									<h3>Data Visualization - Antibiotics Effectiveness</h3>
 								</header>
-								<p>Et jubols ous jaluobus bat sodiflous. Burtous buwe aru lostus fitagus qitac aut bumosious eu qituc omelis wix tous qilous citou sitous. ha.</p>
+								<p>Static data visualization of antibiotics (Neomycin, Penicillin and Streptomycin) effectiveness on 16 different types of bacterias. </p>
 								<footer>
-									<a href="#" class="button alt">Find out more</a>
-								</footer>
-							</section>
-						</div>
-					</div>
-					<div class="row">
-						<div class="4u">
-							<section class="box">
-								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-								<header>
-									<h3>Fit in something important later</h3>
-								</header>
-								<p>Et jubols ous jaluobus bat sodiflous. Burtous buwe aru lostus fitagus qitac aut bumosious eu qituc omelis wix tous qilous citou sitous. ha.</p>
-								<footer>
-									<a href="#" class="button alt">Find out more</a>
-								</footer>
-							</section>
-						</div>
-						<div class="4u">
-							<section class="box">
-								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-								<header>
-									<h3>Fit in something important later</h3>
-								</header>
-								<p>Et jubols ous jaluobus bat sodiflous. Burtous buwe aru lostus fitagus qitac aut bumosious eu qituc omelis wix tous qilous citou sitous. ha.</p>
-								<footer>
-									<a href="#" class="button alt">Find out more</a>
-								</footer>
-							</section>
-						</div>
-						<div class="4u">
-							<section class="box">
-								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-								<header>
-									<h3>Fit in something important later</h3>
-								</header>
-								<p>Et jubols ous jaluobus bat sodiflous. Burtous buwe aru lostus fitagus qitac aut bumosious eu qituc omelis wix tous qilous citou sitous. ha.</p>
-								<footer>
-									<a href="#" class="button alt">Find out more</a>
+									<a href="docs/AntibioticsEffectiveness.pdf" class="button alt">Find out more</a>
 								</footer>
 							</section>
 						</div>
