--- a/project/index.html
+++ b/project/index.html
@@ -109,13 +109,13 @@
           <div class="row">
 						<div class="4u">
 							<section class="box">
-								<a href="fly/index.html" class="image featured"><img src="images/07.jpg" alt="" /></a>
+								<a href="docs/fly.html" class="image featured"><img src="images/07.jpg" alt="" /></a>
 								<header>
 									<h3>Very Tiny Little Piece: Interesting Movement</h3>
 								</header>
 								<p>While working on another project, I produced a tiny little piece of some interesting movements. Mouse orbit control enabled.</p>
 								<footer>
-									<a href="fly/index.html" class="button alt">Find out more</a>
+									<a href="docs/fly.html" class="button alt">Find out more</a>
 								</footer>
 							</section>
 						</div>
