--- a/project/index.html
+++ b/project/index.html
@@ -119,6 +119,18 @@
 								</footer>
 							</section>
 						</div>
+            <div class="4u">
+							<section class="box">
+								<a href="a3-yx1992-Heyl-xiaoyiz" class="image featured"><img src="images/08.jpg" alt="" /></a>
+								<header>
+									<h3>Data Visualization: World's GDP</h3>
+								</header>
+								<p>Interactive data visualization to discover how world's economy developed based on world's GDP (Gross Domestic Product) in current US$ from 1960 to 2013.</p>
+								<footer>
+									<a href="a3-yx1992-Heyl-xiaoyiz" class="button alt">Find out more</a>
+								</footer>
+							</section>
+						</div>
 					</div>
 				</section>
 			</div>
