--- a/project/index.html
+++ b/project/index.html
@@ -131,6 +131,18 @@
 								</footer>
 							</section>
 						</div>
+            <div class="4u">
+							<section class="box">
+								<a href="graphics" class="image featured"><img src="images/09.jpg" alt="" /></a>
+								<header>
+									<h3>Graphics Visual Art: All about Beauty</h3>
+								</header>
+								<p>A going on project of some interesting graphics visual art pieces I made for fun. Truth should be simple and pretty. Hope you enjoy.</p>
+								<footer>
+									<a href="graphics" class="button alt">Find out more</a>
+								</footer>
+							</section>
+						</div>
 					</div>
 				</section>
 			</div>
