--- a/project/graphics/index.html
+++ b/project/graphics/index.html
@@ -7,7 +7,7 @@
   <script src="libs/jquery-1.11.3.min.js"></script>
   <script src="libs/three.min.js"></script>
   
-  <script src="chapters/rose/rose.js"></script>
+  <script src="chapters/flower/flower.js"></script>
 
   <!--[if (gt IE 8) | (IEMobile)]><!-->
   <link rel="stylesheet" href="css/style.css">
@@ -63,8 +63,8 @@
   $( '.menu-btn' ).click(function(){
     $('.responsive-menu').toggleClass('expand')
   })
-  var rose = new Rose(window.innerWidth, window.innerHeight - 70);;
-  rose.start();
+  var flower = new Flower(window.innerWidth, window.innerHeight - 70);;
+  flower.start();
         
 </script>
 </html>
