--- a/project/indyle/index.html
+++ b/project/indyle/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
+    <meta charset="utf-8">
 		<title>Indyle</title>
   <link rel="stylesheet" href="style.css"></script>
 	</head>
