--- a/project/indyle/index.html
+++ b/project/indyle/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css"></script>
 	</head>
 	<body>
-    <p align="center" style ="margin-top:3%"><img src="logo.png" width=200></p>
+    <p align="center" style ="margin-top:3%"><img src="logo_200.png" width=200></p>
     
     <div class="container">
 
