--- a/gallery.html
+++ b/gallery.html
@@ -37,7 +37,7 @@
 			<article class="container box style2">
 				<header>
 					<h2>Gallary</h2>
-					<p>I am not good at classifying and arranging things, but still hope you enjoy them.</p>
+					<p>The world is so pretty. Couldn't stop loving it.</p>
 				</header>
 				<div class="inner gallery">
 					<div class="row 0%">
