--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				<a href="project/" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
-						<a href="project/" /><h2>Somatosensory<br />Things I worked</h2></a>
+						<a href="project/" /><h2>Somatosensory<br />Projects</h2></a>
 					</header>
 					<p>Research.<br />Class.<br />Work.<br /></p>
 				</div>
@@ -64,10 +64,10 @@
 		
 		<!-- Feature 2 -->
 			<article class="container box style1 left">
-				<a href="gallery.html" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+				<a href="gallery/" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
-						<a href="gallery.html" /><h2>Visual<br />Gallery</h2></a>
+						<a href="gallery/" /><h2>Visual<br />Gallery</h2></a>
 					</header>
 					<p>Moments I captured.<br />Art work I made.<br />Life I enjoying.</p>
 				</div>
@@ -80,7 +80,7 @@
 					<header>
 						<a href="blog/" /><h2>Auditory<br />Blog</h2></a>
 					</header>
-					<p>Just random thoughts and things.<br />Not really auditory...<br />but I like to read words out in mind.</p>
+					<p>Random thoughts and things.<br />Not serious...<br />Blabla...</p>
 				</div>
 			</article>
 		
