--- a/gallery/index_np.html
+++ b/gallery/index_np.html
@@ -33,7 +33,7 @@
           <div class="row">
 						<div class="4u">
 							<section class="box">
-								<a href="subgallery/sub_np_olympic.html" class="image featured"><img src="images/np/olympic.JPG" alt="" /></a>
+								<a href="subgallery/sub_np_olympic.html" class="image featured"><img src="images/np/olympic.jpg" alt="" /></a>
 								<header>
 									<h3>Olympic</h3>
 								</header>
