--- a/gallery/subgallery/sub9.html
+++ b/gallery/subgallery/sub9.html
@@ -49,7 +49,7 @@
 						<div class="3u"><a href="images/fulls/0289.jpg" class="image fit"><img src="images/thumbs/0289.jpg" alt="" title="Untitled" /></a></div>
 					</div>
 					<div class="row 0%">
-						<div class="3u"><a href="images/fulls/0290.jpg" class="image fit"><img src="images/thumbs/0290.JPG" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="images/fulls/0290.jpg" class="image fit"><img src="images/thumbs/0290.jpg" alt="" title="Untitled" /></a></div>
 						<div class="3u"><a href="images/fulls/0291.jpg" class="image fit"><img src="images/thumbs/0291.jpg" alt="" title="Untitled" /></a></div>
 						<div class="3u"><a href="images/fulls/0292.jpg" class="image fit"><img src="images/thumbs/0292.jpg" alt="" title="Untitled" /></a></div>
 						<div class="3u"><a href="images/fulls/0293.jpg" class="image fit"><img src="images/thumbs/0293.jpg" alt="" title="Untitled" /></a></div>
