--- a/gallery/subgallery/sub8.html
+++ b/gallery/subgallery/sub8.html
@@ -49,7 +49,7 @@
 						<div class="3u"><a href="images/fulls/0241.jpg" class="image fit"><img src="images/thumbs/0241.jpg" alt="" title="Untitled" /></a></div>
 					</div>
 					<div class="row 0%">
-						<div class="3u"><a href="images/fulls/0242.jpg" class="image fit"><img src="images/thumbs/0242.JPG" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="images/fulls/0242.jpg" class="image fit"><img src="images/thumbs/0242.jpg" alt="" title="Untitled" /></a></div>
 						<div class="3u"><a href="images/fulls/0243.jpg" class="image fit"><img src="images/thumbs/0243.jpg" alt="" title="Untitled" /></a></div>
 						<div class="3u"><a href="images/fulls/0244.jpg" class="image fit"><img src="images/thumbs/0244.jpg" alt="" title="Untitled" /></a></div>
 						<div class="3u"><a href="images/fulls/0245.jpg" class="image fit"><img src="images/thumbs/0245.jpg" alt="" title="Untitled" /></a></div>
@@ -102,7 +102,7 @@
 						<div class="3u"><a href="images/fulls/0274.jpg" class="image fit"><img src="images/thumbs/0274.jpg" alt="" title="Untitled" /></a></div>
 						<div class="3u"><a href="images/fulls/0275.jpg" class="image fit"><img src="images/thumbs/0275.jpg" alt="" title="Untitled" /></a></div>
 						<div class="3u"><a href="images/fulls/0276.jpg" class="image fit"><img src="images/thumbs/0276.jpg" alt="" title="Untitled" /></a></div>
-						<div class="3u"><a href="images/fulls/0277.JPG" class="image fit"><img src="images/thumbs/0277.jpg" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="images/fulls/0277.jpg" class="image fit"><img src="images/thumbs/0277.jpg" alt="" title="Untitled" /></a></div>
 					</div>
 					<div class="row 0%">
 						<div class="3u"><a href="images/fulls/0278.jpg" class="image fit"><img src="images/thumbs/0278.jpg" alt="" title="Untitled" /></a></div>
