--- a/gallery/subgallery/sub_us_california.html
+++ b/gallery/subgallery/sub_us_california.html
@@ -50,9 +50,9 @@
 					</div>
 					<div class="row 0%">
 						<div class="3u"><a href="st_california/fulls/0005.jpg" class="image fit"><img src="st_california/thumbs/0005.jpg" alt="" title="Palo Alto" /></a></div>
-						<div class="3u"><a href="st_california/fulls/0006.JPG" class="image fit"><img src="st_california/thumbs/0006.jpg" alt="" title="Palo Alto" /></a></div>
-						<div class="3u"><a href="st_california/fulls/0007.JPG" class="image fit"><img src="st_california/thumbs/0007.jpg" alt="" title="Palo Alto" /></a></div>
-						<div class="3u"><a href="st_california/fulls/0008.JPG" class="image fit"><img src="st_california/thumbs/0008.jpg" alt="" title="Palo Alto" /></a></div>
+						<div class="3u"><a href="st_california/fulls/0006.jpg" class="image fit"><img src="st_california/thumbs/0006.jpg" alt="" title="Palo Alto" /></a></div>
+						<div class="3u"><a href="st_california/fulls/0007.jpg" class="image fit"><img src="st_california/thumbs/0007.jpg" alt="" title="Palo Alto" /></a></div>
+						<div class="3u"><a href="st_california/fulls/0008.jpg" class="image fit"><img src="st_california/thumbs/0008.jpg" alt="" title="Palo Alto" /></a></div>
 					</div>
 			</article>
 
