--- a/gallery/subgallery/sub_us_washington.html
+++ b/gallery/subgallery/sub_us_washington.html
@@ -40,7 +40,7 @@
 						<div class="3u"><a href="images/fulls/0096.jpg" class="image fit"><img src="images/thumbs/0096.jpg" alt="" title="Wilsonia, Seattle" /></a></div>
 						<div class="3u"><a href="images/fulls/0097.jpg" class="image fit"><img src="images/thumbs/0097.jpg" alt="" title="Kirkland, WA" /></a></div>
 						<div class="3u"><a href="images/fulls/0100.jpg" class="image fit"><img src="images/thumbs/0100.jpg" alt="" title="Crab Pot, Seattle" /></a></div>
-						<div class="3u"><a href="images/fulls/0321.JPG" class="image fit"><img src="images/thumbs/0321.jpg" alt="" title="Seattle" /></a></div>
+						<div class="3u"><a href="images/fulls/0321.jpg" class="image fit"><img src="images/thumbs/0321.jpg" alt="" title="Seattle" /></a></div>
 					</div>
 					<div class="row 0%">
 						<div class="3u"><a href="images/fulls/0101.jpg" class="image fit"><img src="images/thumbs/0101.jpg" alt="" title="Gaussian Blur" /></a></div>
@@ -55,28 +55,28 @@
 						<div class="3u"><a href="images/fulls/0070.jpg" class="image fit"><img src="images/thumbs/0070.jpg" alt="" title="UW Campus, Seattle" /></a></div>
 					</div>
 					<div class="row 0%">
-						<div class="3u"><a href="us/washington/fulls/0001.JPG" class="image fit"><img src="us/washington/thumbs/0001.JPG" alt="" title="From Space Needle, Seattle" /></a></div>
-						<div class="3u"><a href="us/washington/fulls/0002.JPG" class="image fit"><img src="us/washington/thumbs/0002.JPG" alt="" title="From Space Needle, Seattle" /></a></div>
-						<div class="3u"><a href="us/washington/fulls/0003.JPG" class="image fit"><img src="us/washington/thumbs/0003.JPG" alt="" title="From Space Needle, Seattle" /></a></div>
-						<div class="3u"><a href="us/washington/fulls/0004.JPG" class="image fit"><img src="us/washington/thumbs/0004.JPG" alt="" title="From Space Needle, Seattle" /></a></div>
+						<div class="3u"><a href="us/washington/fulls/0001.jpg" class="image fit"><img src="us/washington/thumbs/0001.jpg" alt="" title="From Space Needle, Seattle" /></a></div>
+						<div class="3u"><a href="us/washington/fulls/0002.jpg" class="image fit"><img src="us/washington/thumbs/0002.jpg" alt="" title="From Space Needle, Seattle" /></a></div>
+						<div class="3u"><a href="us/washington/fulls/0003.jpg" class="image fit"><img src="us/washington/thumbs/0003.jpg" alt="" title="From Space Needle, Seattle" /></a></div>
+						<div class="3u"><a href="us/washington/fulls/0004.jpg" class="image fit"><img src="us/washington/thumbs/0004.jpg" alt="" title="From Space Needle, Seattle" /></a></div>
 					</div>
 					<div class="row 0%">
-						<div class="3u"><a href="us/washington/fulls/0005.JPG" class="image fit"><img src="us/washington/thumbs/0005.JPG" alt="" title="From Space Needle, Seattle" /></a></div>
-						<div class="3u"><a href="us/washington/fulls/0006.JPG" class="image fit"><img src="us/washington/thumbs/0006.JPG" alt="" title="From Space Needle, Seattle" /></a></div>
-						<div class="3u"><a href="us/washington/fulls/0007.JPG" class="image fit"><img src="us/washington/thumbs/0007.JPG" alt="" title="From Space Needle, Seattle" /></a></div>
-						<div class="3u"><a href="us/washington/fulls/0008.JPG" class="image fit"><img src="us/washington/thumbs/0008.JPG" alt="" title="From Space Needle, Seattle" /></a></div>
+						<div class="3u"><a href="us/washington/fulls/0005.jpg" class="image fit"><img src="us/washington/thumbs/0005.jpg" alt="" title="From Space Needle, Seattle" /></a></div>
+						<div class="3u"><a href="us/washington/fulls/0006.jpg" class="image fit"><img src="us/washington/thumbs/0006.jpg" alt="" title="From Space Needle, Seattle" /></a></div>
+						<div class="3u"><a href="us/washington/fulls/0007.jpg" class="image fit"><img src="us/washington/thumbs/0007.jpg" alt="" title="From Space Needle, Seattle" /></a></div>
+						<div class="3u"><a href="us/washington/fulls/0008.jpg" class="image fit"><img src="us/washington/thumbs/0008.jpg" alt="" title="From Space Needle, Seattle" /></a></div>
 					</div>
           <div class="row 0%">
-						<div class="3u"><a href="us/washington/fulls/0009.JPG" class="image fit"><img src="us/washington/thumbs/0009.JPG" alt="" title="The Great Wheel, Seattle" /></a></div>
-						<div class="3u"><a href="us/washington/fulls/0010.JPG" class="image fit"><img src="us/washington/thumbs/0010.JPG" alt="" title="Downtown, Seattle" /></a></div>
-						<div class="3u"><a href="us/washington/fulls/0011.JPG" class="image fit"><img src="us/washington/thumbs/0011.JPG" alt="" title="Leavenworth, WA" /></a></div>
-						<div class="3u"><a href="us/washington/fulls/0012.JPG" class="image fit"><img src="us/washington/thumbs/0012.JPG" alt="" title="Leavenworth, WA" /></a></div>
+						<div class="3u"><a href="us/washington/fulls/0009.jpg" class="image fit"><img src="us/washington/thumbs/0009.jpg" alt="" title="The Great Wheel, Seattle" /></a></div>
+						<div class="3u"><a href="us/washington/fulls/0010.jpg" class="image fit"><img src="us/washington/thumbs/0010.jpg" alt="" title="Downtown, Seattle" /></a></div>
+						<div class="3u"><a href="us/washington/fulls/0011.jpg" class="image fit"><img src="us/washington/thumbs/0011.jpg" alt="" title="Leavenworth, WA" /></a></div>
+						<div class="3u"><a href="us/washington/fulls/0012.jpg" class="image fit"><img src="us/washington/thumbs/0012.jpg" alt="" title="Leavenworth, WA" /></a></div>
 					</div>
           <div class="row 0%">
-						<div class="3u"><a href="us/washington/fulls/0013.JPG" class="image fit"><img src="us/washington/thumbs/0013.JPG" alt="" title="Leavenworth, WA" /></a></div>
-						<div class="3u"><a href="us/washington/fulls/0014.JPG" class="image fit"><img src="us/washington/thumbs/0014.JPG" alt="" title="Leavenworth, WA" /></a></div>
-						<div class="3u"><a href="us/washington/fulls/0015.JPG" class="image fit"><img src="us/washington/thumbs/0015.JPG" alt="" title="Leavenworth, WA" /></a></div>
-						<div class="3u"><a href="us/washington/fulls/0016.JPG" class="image fit"><img src="us/washington/thumbs/0016.JPG" alt="" title="Leavenworth, WA" /></a></div>
+						<div class="3u"><a href="us/washington/fulls/0013.jpg" class="image fit"><img src="us/washington/thumbs/0013.jpg" alt="" title="Leavenworth, WA" /></a></div>
+						<div class="3u"><a href="us/washington/fulls/0014.jpg" class="image fit"><img src="us/washington/thumbs/0014.jpg" alt="" title="Leavenworth, WA" /></a></div>
+						<div class="3u"><a href="us/washington/fulls/0015.jpg" class="image fit"><img src="us/washington/thumbs/0015.jpg" alt="" title="Leavenworth, WA" /></a></div>
+						<div class="3u"><a href="us/washington/fulls/0016.jpg" class="image fit"><img src="us/washington/thumbs/0016.jpg" alt="" title="Leavenworth, WA" /></a></div>
 					</div>
 			</article>
 
