--- a/gallery/subgallery/sub_np_sagrago.html
+++ b/gallery/subgallery/sub_np_sagrago.html
@@ -37,46 +37,46 @@
 			<article class="container box style2">
 				<div class="inner gallery">
 					<div class="row 0%">
-						<div class="3u"><a href="np/az_sagrago/full/0001.JPG" class="image fit"><img src="np/az_sagrago/thumbs/0001.JPG" alt="" title="Untitled" /></a></div>
-						<div class="3u"><a href="np/az_sagrago/full/0002.JPG" class="image fit"><img src="np/az_sagrago/thumbs/0002.JPG" alt="" title="Untitled" /></a></div>
-						<div class="3u"><a href="np/az_sagrago/full/0003.JPG" class="image fit"><img src="np/az_sagrago/thumbs/0003.JPG" alt="" title="Untitled" /></a></div>
-						<div class="3u"><a href="np/az_sagrago/full/0004.JPG" class="image fit"><img src="np/az_sagrago/thumbs/0004.JPG" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/az_sagrago/fulls/0001.jpg" class="image fit"><img src="np/az_sagrago/thumbs/0001.jpg" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/az_sagrago/fulls/0002.jpg" class="image fit"><img src="np/az_sagrago/thumbs/0002.jpg" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/az_sagrago/fulls/0003.jpg" class="image fit"><img src="np/az_sagrago/thumbs/0003.jpg" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/az_sagrago/fulls/0004.jpg" class="image fit"><img src="np/az_sagrago/thumbs/0004.jpg" alt="" title="Untitled" /></a></div>
 					</div>
 					<div class="row 0%">
-						<div class="3u"><a href="np/az_sagrago/full/0005.JPG" class="image fit"><img src="np/az_sagrago/thumbs/0005.JPG" alt="" title="Untitled" /></a></div>
-						<div class="3u"><a href="np/az_sagrago/full/0006.JPG" class="image fit"><img src="np/az_sagrago/thumbs/0006.JPG" alt="" title="Untitled" /></a></div>
-						<div class="3u"><a href="np/az_sagrago/full/0007.JPG" class="image fit"><img src="np/az_sagrago/thumbs/0007.JPG" alt="" title="Untitled" /></a></div>
-						<div class="3u"><a href="np/az_sagrago/full/0008.JPG" class="image fit"><img src="np/az_sagrago/thumbs/0008.JPG" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/az_sagrago/fulls/0005.jpg" class="image fit"><img src="np/az_sagrago/thumbs/0005.jpg" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/az_sagrago/fulls/0006.jpg" class="image fit"><img src="np/az_sagrago/thumbs/0006.jpg" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/az_sagrago/fulls/0007.jpg" class="image fit"><img src="np/az_sagrago/thumbs/0007.jpg" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/az_sagrago/fulls/0008.jpg" class="image fit"><img src="np/az_sagrago/thumbs/0008.jpg" alt="" title="Untitled" /></a></div>
 					</div>
 					<div class="row 0%">
-						<div class="3u"><a href="np/az_sagrago/full/0009.JPG" class="image fit"><img src="np/az_sagrago/thumbs/0009.JPG" alt="" title="Untitled" /></a></div>
-						<div class="3u"><a href="np/az_sagrago/full/0010.JPG" class="image fit"><img src="np/az_sagrago/thumbs/0010.JPG" alt="" title="Untitled" /></a></div>
-						<div class="3u"><a href="np/az_sagrago/full/0011.JPG" class="image fit"><img src="np/az_sagrago/thumbs/0011.JPG" alt="" title="Untitled" /></a></div>
-						<div class="3u"><a href="np/az_sagrago/full/0012.JPG" class="image fit"><img src="np/az_sagrago/thumbs/0012.JPG" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/az_sagrago/fulls/0009.jpg" class="image fit"><img src="np/az_sagrago/thumbs/0009.jpg" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/az_sagrago/fulls/0010.jpg" class="image fit"><img src="np/az_sagrago/thumbs/0010.jpg" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/az_sagrago/fulls/0011.jpg" class="image fit"><img src="np/az_sagrago/thumbs/0011.jpg" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/az_sagrago/fulls/0012.jpg" class="image fit"><img src="np/az_sagrago/thumbs/0012.jpg" alt="" title="Untitled" /></a></div>
 					</div>
 					<div class="row 0%">
-						<div class="3u"><a href="np/az_sagrago/full/0013.JPG" class="image fit"><img src="np/az_sagrago/thumbs/0013.JPG" alt="" title="Untitled" /></a></div>
-						<div class="3u"><a href="np/az_sagrago/full/0014.JPG" class="image fit"><img src="np/az_sagrago/thumbs/0014.JPG" alt="" title="Untitled" /></a></div>
-						<div class="3u"><a href="np/az_sagrago/full/0015.JPG" class="image fit"><img src="np/az_sagrago/thumbs/0015.JPG" alt="" title="Untitled" /></a></div>
-						<div class="3u"><a href="np/az_sagrago/full/0016.JPG" class="image fit"><img src="np/az_sagrago/thumbs/0016.JPG" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/az_sagrago/fulls/0013.jpg" class="image fit"><img src="np/az_sagrago/thumbs/0013.jpg" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/az_sagrago/fulls/0014.jpg" class="image fit"><img src="np/az_sagrago/thumbs/0014.jpg" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/az_sagrago/fulls/0015.jpg" class="image fit"><img src="np/az_sagrago/thumbs/0015.jpg" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/az_sagrago/fulls/0016.jpg" class="image fit"><img src="np/az_sagrago/thumbs/0016.jpg" alt="" title="Untitled" /></a></div>
 					</div>
 					<div class="row 0%">
-						<div class="3u"><a href="np/az_sagrago/full/0017.JPG" class="image fit"><img src="np/az_sagrago/thumbs/0017.JPG" alt="" title="Untitled" /></a></div>
-						<div class="3u"><a href="np/az_sagrago/full/0018.JPG" class="image fit"><img src="np/az_sagrago/thumbs/0018.JPG" alt="" title="Untitled" /></a></div>
-						<div class="3u"><a href="np/az_sagrago/full/0019.JPG" class="image fit"><img src="np/az_sagrago/thumbs/0019.JPG" alt="" title="Untitled" /></a></div>
-						<div class="3u"><a href="np/az_sagrago/full/0020.JPG" class="image fit"><img src="np/az_sagrago/thumbs/0020.JPG" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/az_sagrago/fulls/0017.jpg" class="image fit"><img src="np/az_sagrago/thumbs/0017.jpg" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/az_sagrago/fulls/0018.jpg" class="image fit"><img src="np/az_sagrago/thumbs/0018.jpg" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/az_sagrago/fulls/0019.jpg" class="image fit"><img src="np/az_sagrago/thumbs/0019.jpg" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/az_sagrago/fulls/0020.jpg" class="image fit"><img src="np/az_sagrago/thumbs/0020.jpg" alt="" title="Untitled" /></a></div>
 					</div>
 					<div class="row 0%">
-						<div class="3u"><a href="np/az_sagrago/full/0021.JPG" class="image fit"><img src="np/az_sagrago/thumbs/0021.JPG" alt="" title="Untitled" /></a></div>
-						<div class="3u"><a href="np/az_sagrago/full/0022.JPG" class="image fit"><img src="np/az_sagrago/thumbs/0022.JPG" alt="" title="Untitled" /></a></div>
-						<div class="3u"><a href="np/az_sagrago/full/0023.JPG" class="image fit"><img src="np/az_sagrago/thumbs/0023.JPG" alt="" title="Untitled" /></a></div>
-						<div class="3u"><a href="np/az_sagrago/full/0024.JPG" class="image fit"><img src="np/az_sagrago/thumbs/0024.JPG" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/az_sagrago/fulls/0021.jpg" class="image fit"><img src="np/az_sagrago/thumbs/0021.jpg" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/az_sagrago/fulls/0022.jpg" class="image fit"><img src="np/az_sagrago/thumbs/0022.jpg" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/az_sagrago/fulls/0023.jpg" class="image fit"><img src="np/az_sagrago/thumbs/0023.jpg" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/az_sagrago/fulls/0024.jpg" class="image fit"><img src="np/az_sagrago/thumbs/0024.jpg" alt="" title="Untitled" /></a></div>
 					</div>
 					<div class="row 0%">
-						<div class="3u"><a href="np//z_sagrago/full/0025.JPG" class="image fit"><img src="np/az_sagrago/thumbs/0025.JPG" alt="" title="Untitled" /></a></div>
-						<div class="3u"><a href="np/az_sagrago/full/0026.JPG" class="image fit"><img src="np/az_sagrago/thumbs/0026.JPG" alt="" title="Untitled" /></a></div>
-						<div class="3u"><a href="np/az_sagrago/full/0027.JPG" class="image fit"><img src="np/az_sagrago/thumbs/0027.JPG" alt="" title="Untitled" /></a></div>
-						<div class="3u"><a href="np/az_sagrago/full/0028.JPG" class="image fit"><img src="np/az_sagrago/thumbs/0028.JPG" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np//z_sagrago/fulls/0025.jpg" class="image fit"><img src="np/az_sagrago/thumbs/0025.jpg" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/az_sagrago/fulls/0026.jpg" class="image fit"><img src="np/az_sagrago/thumbs/0026.jpg" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/az_sagrago/fulls/0027.jpg" class="image fit"><img src="np/az_sagrago/thumbs/0027.jpg" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/az_sagrago/fulls/0028.jpg" class="image fit"><img src="np/az_sagrago/thumbs/0028.jpg" alt="" title="Untitled" /></a></div>
 					</div>
 			</article>
 
