--- a/gallery/subgallery/sub_np_glacierbay.html
+++ b/gallery/subgallery/sub_np_glacierbay.html
@@ -37,76 +37,76 @@
 			<article class="container box style2">
 				<div class="inner gallery">
 					<div class="row 0%">
-						<div class="3u"><a href="np/ak_glacierbay/full/0001.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0001.JPG" alt="" title="Glacier Bay, AK" /></a></div>
-						<div class="3u"><a href="np/ak_glacierbay/full/0002.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0002.JPG" alt="" title="Glacier Bay, AK" /></a></div>
-						<div class="3u"><a href="np/ak_glacierbay/full/0003.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0003.JPG" alt="" title="Glacier Bay, AK" /></a></div>
-						<div class="3u"><a href="np/ak_glacierbay/full/0004.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0004.JPG" alt="" title="Glacier Bay, AK" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0001.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0001.jpg" alt="" title="Glacier Bay, AK" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0002.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0002.jpg" alt="" title="Glacier Bay, AK" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0003.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0003.jpg" alt="" title="Glacier Bay, AK" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0004.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0004.jpg" alt="" title="Glacier Bay, AK" /></a></div>
 					</div>
 					<div class="row 0%">
-						<div class="3u"><a href="np/ak_glacierbay/full/0005.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0005.JPG" alt="" title="Grand Pacific Glacier" /></a></div>
-						<div class="3u"><a href="np/ak_glacierbay/full/0006.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0006.JPG" alt="" title="Grand Pacific Glacier" /></a></div>
-						<div class="3u"><a href="np/ak_glacierbay/full/0007.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0007.JPG" alt="" title="Grand Pacific Glacier" /></a></div>
-						<div class="3u"><a href="np/ak_glacierbay/full/0008.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0008.JPG" alt="" title="Grand Pacific Glacier" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0005.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0005.jpg" alt="" title="Grand Pacific Glacier" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0006.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0006.jpg" alt="" title="Grand Pacific Glacier" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0007.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0007.jpg" alt="" title="Grand Pacific Glacier" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0008.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0008.jpg" alt="" title="Grand Pacific Glacier" /></a></div>
 					</div>
 					<div class="row 0%">
-						<div class="3u"><a href="np/ak_glacierbay/full/0009.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0009.JPG" alt="" title="Johns Hopkins Glacier" /></a></div>
-						<div class="3u"><a href="np/ak_glacierbay/full/0010.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0010.JPG" alt="" title="Lamplugh Glacier" /></a></div>
-						<div class="3u"><a href="np/ak_glacierbay/full/0011.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0011.JPG" alt="" title="Reid Glacier" /></a></div>
-						<div class="3u"><a href="np/ak_glacierbay/full/0012.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0012.JPG" alt="" title="Topeka Glacier" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0009.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0009.jpg" alt="" title="Johns Hopkins Glacier" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0010.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0010.jpg" alt="" title="Lamplugh Glacier" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0011.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0011.jpg" alt="" title="Reid Glacier" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0012.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0012.jpg" alt="" title="Topeka Glacier" /></a></div>
 					</div>
 					<div class="row 0%">
-						<div class="3u"><a href="np/ak_glacierbay/full/0013.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0013.JPG" alt="" title="Untitled" /></a></div>
-						<div class="3u"><a href="np/ak_glacierbay/full/0014.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0014.JPG" alt="" title="Untitled" /></a></div>
-						<div class="3u"><a href="np/ak_glacierbay/full/0015.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0015.JPG" alt="" title="Glacier Bay, AK" /></a></div>
-						<div class="3u"><a href="np/ak_glacierbay/full/0016.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0016.JPG" alt="" title="Bartlett Cove" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0013.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0013.jpg" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0014.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0014.jpg" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0015.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0015.jpg" alt="" title="Glacier Bay, AK" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0016.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0016.jpg" alt="" title="Bartlett Cove" /></a></div>
 					</div>
 					<div class="row 0%">
-						<div class="3u"><a href="np/ak_glacierbay/full/0017.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0017.JPG" alt="" title="Bartlett Cove" /></a></div>
-						<div class="3u"><a href="np/ak_glacierbay/full/0018.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0018.JPG" alt="" title="Bartlett Cove" /></a></div>
-						<div class="3u"><a href="np/ak_glacierbay/full/0019.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0019.JPG" alt="" title="Bartlett Cove" /></a></div>
-						<div class="3u"><a href="np/ak_glacierbay/full/0020.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0020.JPG" alt="" title="Bartlett Cove" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0017.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0017.jpg" alt="" title="Bartlett Cove" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0018.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0018.jpg" alt="" title="Bartlett Cove" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0019.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0019.jpg" alt="" title="Bartlett Cove" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0020.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0020.jpg" alt="" title="Bartlett Cove" /></a></div>
 					</div>
 					<div class="row 0%">
-						<div class="3u"><a href="np/ak_glacierbay/full/0021.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0021.JPG" alt="" title="Bartlett Cove" /></a></div>
-						<div class="3u"><a href="np/ak_glacierbay/full/0022.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0022.JPG" alt="" title="Bartlett Cove" /></a></div>
-						<div class="3u"><a href="np/ak_glacierbay/full/0023.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0023.JPG" alt="" title="Bartlett Cove" /></a></div>
-						<div class="3u"><a href="np/ak_glacierbay/full/0024.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0024.JPG" alt="" title="Glacier Bay Lodge" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0021.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0021.jpg" alt="" title="Bartlett Cove" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0022.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0022.jpg" alt="" title="Bartlett Cove" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0023.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0023.jpg" alt="" title="Bartlett Cove" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0024.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0024.jpg" alt="" title="Glacier Bay Lodge" /></a></div>
 					</div>
 					<div class="row 0%">
-						<div class="3u"><a href="np/ak_glacierbay/full/0025.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0025.JPG" alt="" title="Bartlett Cove" /></a></div>
-						<div class="3u"><a href="np/ak_glacierbay/full/0026.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0026.JPG" alt="" title="Bartlett Cove" /></a></div>
-						<div class="3u"><a href="np/ak_glacierbay/full/0027.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0027.JPG" alt="" title="Cow Parsnip" /></a></div>
-						<div class="3u"><a href="np/ak_glacierbay/full/0028.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0028.JPG" alt="" title="Cow Parsnip" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0025.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0025.jpg" alt="" title="Bartlett Cove" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0026.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0026.jpg" alt="" title="Bartlett Cove" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0027.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0027.jpg" alt="" title="Cow Parsnip" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0028.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0028.jpg" alt="" title="Cow Parsnip" /></a></div>
 					</div>
 					<div class="row 0%">
-						<div class="3u"><a href="np/ak_glacierbay/full/0029.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0029.JPG" alt="" title="Bartlett Cove" /></a></div>
-						<div class="3u"><a href="np/ak_glacierbay/full/0030.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0030.JPG" alt="" title="Bartlett Cove" /></a></div>
-						<div class="3u"><a href="np/ak_glacierbay/full/0031.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0031.JPG" alt="" title="Bartlett Cove" /></a></div>
-						<div class="3u"><a href="np/ak_glacierbay/full/0032.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0032.JPG" alt="" title="Bartlett Cove" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0029.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0029.jpg" alt="" title="Bartlett Cove" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0030.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0030.jpg" alt="" title="Bartlett Cove" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0031.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0031.jpg" alt="" title="Bartlett Cove" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0032.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0032.jpg" alt="" title="Bartlett Cove" /></a></div>
 					</div>
 					<div class="row 0%">
-						<div class="3u"><a href="np/ak_glacierbay/full/0033.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0033.JPG" alt="" title="Bartlett Cove" /></a></div>
-						<div class="3u"><a href="np/ak_glacierbay/full/0034.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0034.JPG" alt="" title="Bartlett Cove" /></a></div>
-						<div class="3u"><a href="np/ak_glacierbay/full/0035.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0035.JPG" alt="" title="Forest Trail" /></a></div>
-						<div class="3u"><a href="np/ak_glacierbay/full/0036.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0036.JPG" alt="" title="Forest Trail" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0033.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0033.jpg" alt="" title="Bartlett Cove" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0034.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0034.jpg" alt="" title="Bartlett Cove" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0035.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0035.jpg" alt="" title="Forest Trail" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0036.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0036.jpg" alt="" title="Forest Trail" /></a></div>
 					</div>
 					<div class="row 0%">
-						<div class="3u"><a href="np/ak_glacierbay/full/0037.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0037.JPG" alt="" title="Untitled" /></a></div>
-						<div class="3u"><a href="np/ak_glacierbay/full/0038.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0038.JPG" alt="" title="Untitled" /></a></div>
-						<div class="3u"><a href="np/ak_glacierbay/full/0039.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0039.JPG" alt="" title="Untitled" /></a></div>
-						<div class="3u"><a href="np/ak_glacierbay/full/0040.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0040.JPG" alt="" title="Dragonfly" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0037.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0037.jpg" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0038.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0038.jpg" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0039.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0039.jpg" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0040.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0040.jpg" alt="" title="Dragonfly" /></a></div>
 					</div>
 					<div class="row 0%">
-						<div class="3u"><a href="np/ak_glacierbay/full/0041.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0041.JPG" alt="" title="Beach Strawberries, Delicious" /></a></div>
-						<div class="3u"><a href="np/ak_glacierbay/full/0042.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0042.JPG" alt="" title="Beach Strawberries, Delicious" /></a></div>
-						<div class="3u"><a href="np/ak_glacierbay/full/0043.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0043.JPG" alt="" title="Nagoonberry, Delicious" /></a></div>
-						<div class="3u"><a href="np/ak_glacierbay/full/0044.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0044.JPG" alt="" title=", Don't eat" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0041.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0041.jpg" alt="" title="Beach Strawberries, Delicious" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0042.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0042.jpg" alt="" title="Beach Strawberries, Delicious" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0043.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0043.jpg" alt="" title="Nagoonberry, Delicious" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0044.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0044.jpg" alt="" title=", Don't eat" /></a></div>
 					</div>
 					<div class="row 0%">
-						<div class="3u"><a href="np/ak_glacierbay/full/0045.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0045.JPG" alt="" title="Untitled" /></a></div>
-						<div class="3u"><a href="np/ak_glacierbay/full/0046.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0046.JPG" alt="" title="Untitled" /></a></div>
-						<div class="3u"><a href="np/ak_glacierbay/full/0047.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0047.JPG" alt="" title="A Whale Named Snow, 44 Yr Old" /></a></div>
-						<div class="3u"><a href="np/ak_glacierbay/full/0048.JPG" class="image fit"><img src="np/ak_glacierbay/thumbs/0048.JPG" alt="" title="A Whale Named Snow, 44 Yr Old" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0045.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0045.jpg" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0046.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0046.jpg" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0047.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0047.jpg" alt="" title="A Whale Named Snow, 44 Yr Old" /></a></div>
+						<div class="3u"><a href="np/ak_glacierbay/fulls/0048.jpg" class="image fit"><img src="np/ak_glacierbay/thumbs/0048.jpg" alt="" title="A Whale Named Snow, 44 Yr Old" /></a></div>
 					</div>
 			</article>
 
