--- a/gallery/subgallery/sub_np_windcave.html
+++ b/gallery/subgallery/sub_np_windcave.html
@@ -37,28 +37,28 @@
 			<article class="container box style2">
 				<div class="inner gallery">
 					<div class="row 0%">
-						<div class="3u"><a href="np/sd_windcave/fulls/0001.JPG" class="image fit"><img src="np/sd_windcave/thumbs/0001.JPG" alt="" title="Untitled" /></a></div>
-						<div class="3u"><a href="np/sd_windcave/fulls/0002.JPG" class="image fit"><img src="np/sd_windcave/thumbs/0002.JPG" alt="" title="Untitled" /></a></div>
-						<div class="3u"><a href="np/sd_windcave/fulls/0003.JPG" class="image fit"><img src="np/sd_windcave/thumbs/0003.JPG" alt="" title="Untitled" /></a></div>
-						<div class="3u"><a href="np/sd_windcave/fulls/0004.JPG" class="image fit"><img src="np/sd_windcave/thumbs/0004.JPG" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/sd_windcave/fulls/0001.jpg" class="image fit"><img src="np/sd_windcave/thumbs/0001.jpg" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/sd_windcave/fulls/0002.jpg" class="image fit"><img src="np/sd_windcave/thumbs/0002.jpg" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/sd_windcave/fulls/0003.jpg" class="image fit"><img src="np/sd_windcave/thumbs/0003.jpg" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/sd_windcave/fulls/0004.jpg" class="image fit"><img src="np/sd_windcave/thumbs/0004.jpg" alt="" title="Untitled" /></a></div>
 					</div>
 					<div class="row 0%">
-						<div class="3u"><a href="np/sd_windcave/fulls/0005.JPG" class="image fit"><img src="np/sd_windcave/thumbs/0005.JPG" alt="" title="Untitled" /></a></div>
-						<div class="3u"><a href="np/sd_windcave/fulls/0006.JPG" class="image fit"><img src="np/sd_windcave/thumbs/0006.JPG" alt="" title="Untitled" /></a></div>
-						<div class="3u"><a href="np/sd_windcave/fulls/0007.JPG" class="image fit"><img src="np/sd_windcave/thumbs/0007.JPG" alt="" title="Untitled" /></a></div>
-						<div class="3u"><a href="np/sd_windcave/fulls/0008.JPG" class="image fit"><img src="np/sd_windcave/thumbs/0008.JPG" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/sd_windcave/fulls/0005.jpg" class="image fit"><img src="np/sd_windcave/thumbs/0005.jpg" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/sd_windcave/fulls/0006.jpg" class="image fit"><img src="np/sd_windcave/thumbs/0006.jpg" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/sd_windcave/fulls/0007.jpg" class="image fit"><img src="np/sd_windcave/thumbs/0007.jpg" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/sd_windcave/fulls/0008.jpg" class="image fit"><img src="np/sd_windcave/thumbs/0008.jpg" alt="" title="Untitled" /></a></div>
 					</div>
 					<div class="row 0%">
-						<div class="3u"><a href="np/sd_windcave/fulls/0009.JPG" class="image fit"><img src="np/sd_windcave/thumbs/0009.JPG" alt="" title="Untitled" /></a></div>
-						<div class="3u"><a href="np/sd_windcave/fulls/0010.JPG" class="image fit"><img src="np/sd_windcave/thumbs/0010.JPG" alt="" title="Untitled" /></a></div>
-						<div class="3u"><a href="np/sd_windcave/fulls/0011.JPG" class="image fit"><img src="np/sd_windcave/thumbs/0011.JPG" alt="" title="Untitled" /></a></div>
-						<div class="3u"><a href="np/sd_windcave/fulls/0012.JPG" class="image fit"><img src="np/sd_windcave/thumbs/0012.JPG" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/sd_windcave/fulls/0009.jpg" class="image fit"><img src="np/sd_windcave/thumbs/0009.jpg" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/sd_windcave/fulls/0010.jpg" class="image fit"><img src="np/sd_windcave/thumbs/0010.jpg" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/sd_windcave/fulls/0011.jpg" class="image fit"><img src="np/sd_windcave/thumbs/0011.jpg" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/sd_windcave/fulls/0012.jpg" class="image fit"><img src="np/sd_windcave/thumbs/0012.jpg" alt="" title="Untitled" /></a></div>
 					</div>
 					<div class="row 0%">
-						<div class="3u"><a href="np/sd_windcave/fulls/0013.JPG" class="image fit"><img src="np/sd_windcave/thumbs/0013.JPG" alt="" title="Untitled" /></a></div>
-						<div class="3u"><a href="np/sd_windcave/fulls/0014.JPG" class="image fit"><img src="np/sd_windcave/thumbs/0014.JPG" alt="" title="Untitled" /></a></div>
-						<div class="3u"><a href="np/sd_windcave/fulls/0015.JPG" class="image fit"><img src="np/sd_windcave/thumbs/0015.JPG" alt="" title="Untitled" /></a></div>
-						<div class="3u"><a href="np/sd_windcave/fulls/0016.JPG" class="image fit"><img src="np/sd_windcave/thumbs/0016.JPG" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/sd_windcave/fulls/0013.jpg" class="image fit"><img src="np/sd_windcave/thumbs/0013.jpg" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/sd_windcave/fulls/0014.jpg" class="image fit"><img src="np/sd_windcave/thumbs/0014.jpg" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/sd_windcave/fulls/0015.jpg" class="image fit"><img src="np/sd_windcave/thumbs/0015.jpg" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="np/sd_windcave/fulls/0016.jpg" class="image fit"><img src="np/sd_windcave/thumbs/0016.jpg" alt="" title="Untitled" /></a></div>
 					</div>
 			</article>
 
