--- a/gallery/subgallery/sub10.html
+++ b/gallery/subgallery/sub10.html
@@ -52,6 +52,7 @@
 						<div class="3u"><a href="images/fulls/0318.jpg" class="image fit"><img src="images/thumbs/0318.jpg" alt="" title="Untitled" /></a></div>
 						<div class="3u"><a href="images/fulls/0319.jpg" class="image fit"><img src="images/thumbs/0319.jpg" alt="" title="Untitled" /></a></div>
 						<div class="3u"><a href="images/fulls/0320.jpg" class="image fit"><img src="images/thumbs/0320.jpg" alt="" title="Untitled" /></a></div>
+						<div class="3u"><a href="images/fulls/0325.jpg" class="image fit"><img src="images/thumbs/0325.jpg" alt="" title="Untitled" /></a></div>
 					</div>
 			</article>
 
